# sqlite3.arkts

./: README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package.json5
entry/src/main/: module.json5
sqlite3_native_example/: oh-package-lock.json5  oh-package.json5
sqlite3_native_example/src/main/: module.json5
sqlite3_native_example/src/main/cpp/: CMakeLists.txt  napi_init.cpp
sqlite3_native_example/src/main/cpp/types/libsqlite3_native_example/: oh-package.json5
sqlite3_native_example/src/main/ets/pages/: Index.ets
sqlite3_native_example/src/main/ets/sqlite3_native_example_ability/: Sqlite3NativeExampleAbility.ets
sqlite3_native_example/src/main/resources/en_US/element/: string.json
sqlite3_native_example/src/main/resources/zh_CN/element/: string.json
sqlite3_native_example/src/mock/: mock-config.json5
sqlite3_native_example/src/ohosTest/: module.json5
sqlite3_native_library/: BuildProfile.ets  CHANGELOG.md  README.md  build-profile.json5  oh-package.json5
sqlite3_native_library/src/main/: module.json5
sqlite3_native_library/src/main/cpp/: CMakeLists.txt
